# dot

./: .gitignore  .zprofile  .zshenv  Brewfile  LICENSE  Makefile  README.md  auto  brew.txt  ghci.conf  pkg_arch.txt  pkg_arch_aur.txt  pkg_macos.txt  programs.csv  programs.json  setup  setup.lua  setup.py  setup.sh
.config/alacritty/: alacritty.yml
.config/bat/: config
.config/btop/: btop.conf
.config/dunst/: dunstrc
.config/ghostty/: config
.config/git/: config
.config/gitui/: key_bindings.ron  theme.ron
.config/hypr/: hyprland.conf  hyprlock.conf  hyprpaper.conf  ss
.config/i3/: config
.config/i3blocks/: config
.config/i3status-rust/: config.toml
.config/ipython/profile_default/: ipython_config.py
.config/isync/: mbsyncrc
.config/kitty/: kitty.conf
.config/mise/: config.toml  requirements.txt
.config/mpd/: mpd.conf
.config/mpv/: input.conf
.config/msmtp/: config
.config/mutt/: muttrc  signature
.config/ncmpcpp/: bindings  config
.config/neomutt/: mailcap  neomuttrc  signature
.config/newsboat/: config  urls
.config/nnn/plugins/: githubclone  newdir  showfile
.config/notmuch/: config  notmuch-config
.config/nsxiv/exec/: key-handler
.config/nvim/: coc-settings.json  init.lua  init.vim  lazy-lock.json
.config/nvim/after/plugin/: aerial.lua  fugitive.lua  fzf.lua  gitsigns.lua  indent_blankline.lua  kanagawa.lua  lsp.lua  lualine.lua  nnn.lua  oil.lua  treesitter.lua
.config/nvim/lua/: autocmd.lua  autocmds.lua  color.lua  general.lua  keymap.lua  mappings.lua  option.lua  plugin.lua  plugins.lua  util.lua
.config/nvim/lua/general/: autocmds.lua  colorscheme.lua  mappings.lua  options.lua
.config/nvim/lua/plugin/: conform.lua  fugitive.lua  fzf.lua  gitsigns.lua  indentmini.lua  kanagawa.lua  lsp.lua  lualine.lua  nvim_tree.lua  oil.lua  treesitter.lua
.config/nvim/lua/plugins/: colorscheme.lua  dashboard.lua  devicons.lua  doge.lua  dracula.lua  fzf.lua  indent_blankline.lua  indentblankline.lua  kanagawa.lua  lsp.lua  lualine.lua  neogit.lua  neoterm.lua  nvimtree.lua  packer.lua  statusline.lua  telescope.lua  tokyonight.lua  treesitter.lua  undotree.lua
.config/nvim/lua/settings/: dracula.lua  fzf.lua  indentblankline.lua  nvimtree.lua  packer.lua  statusline.lua
.config/nvim/plugin/: autocmd.lua  color.lua  compiler.lua  fugitive.lua  keymap.lua  keymaps.lua  nnn.lua  option.lua  style.lua  terminal.lua  undotree.lua
.config/other/: CMakeLists.txt  clang-format  compile_flags.txt  rustfmt.toml
.config/picom/: picom.conf
.config/rofi/: config.rasi
.config/skhd/: skhdrc
.config/swappy/: config
.config/systemd/user/: emailsync.service  emailsync.timer  mbsync.service  mbsync.timer
.config/tmux/: tmux.conf
.config/vifm/: vifmrc
.config/vifm/colors/: gruvbox.vifm
.config/vifm/icons/: icons.vifm
.config/waybar/: config  style.css
.config/wezterm/: colors.lua  fonts.lua  keys.lua  ui.lua  wezterm.lua
.config/wget/: wgetrc
.config/yazi/: init.lua  keymap.toml  theme.toml  yazi.toml
.config/zathura/: zathurarc
.config/zsh/: .zshenv  .zshrc  inputrc
.ghc/: ghci.conf
.local/share/: bookmark  bookmark.csv  bookmark.txt  paper  paper.csv  todo.md
.local/share/applications/: kitty.desktop  neomutt.desktop
.local/share/gnupg/: gpg-agent.conf
.local/share/templates/cpp/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  main.cpp  vcpkg.json
.local/share/templates/cpp/cmake/: tooling.cmake
.local/share/templates/cpp/cmake/toolchains/: base.cmake  clang.cmake  gcc.cmake
.local/share/templates/cpp/include/: lib.hpp
.local/share/templates/cpp/test/: CMakeLists.txt  tests.cpp
.local/share/templates/go/: Makefile  README.md  app  go.mod
arch/waybar/: config  style.css
dotfiles/: README.md  ghci.conf
dotfiles/.config/kitty/: kitty.conf
dotfiles/.config/ncmpcpp/: config
dotfiles/.config/newsboat/: config
dotfiles/.config/nvim/: init.vim
dotfiles/.config/zathura/: zathurarc
dotfiles/.config/zsh/: zshrc
dotfiles/.scripts/: README.md  compile_or_run  github_setup  note  rename  rwp  wp
fonts/: README.md
linux/arch/hypr/: hyprpaper.conf
nvim_tmp/: init.lua
nvim_tmp/lua/: autocmds.lua  general.lua  mapping.lua  mappings.lua  plugins.lua  settings.lua  util.lua  utils.lua
nvim_tmp/lua/plugins/: lsp.lua  statusline.lua  treesitter.lua
(+12 files in other folders)
